Requires
~~~~~~~~
-
New features
~~~~~~~~~~~~
- Added the best bet for the preselection of the section in the
  folder_recursive_publish_form.
Bug fixes
~~~~~~~~~
- #1886: A set focus causes unwanted scroll in the search results page.
New internal features
~~~~~~~~~~~~~~~~~~~~~
- 