@@ -12,7 +12,7 @@
  <action-icon category="object" action_id="preview"
               title="Preview" priority="30"
               icon_expr="actionicon_preview_icon.png"/>
- <action-icon category="object" action_id="edit"
+ <action-icon category="object" action_id="modify"
               title="Edit" priority="100"
               icon_expr="actionicon_modify.png"/>
  <action-icon category="object" action_id="metadata"
