@@ -49,11 +49,6 @@
     url_expr="string:${object_url}/folder_contents" visible="True">
   <permission value="Modify portal content"/>
  </action>
- <action title="action_edit" action_id="edit" category="object"
-    condition_expr="" url_expr="string:${object_url}/cpsdocument_edit_form"
-    visible="True">
-  <permission value="Modify portal content"/>
- </action>
  <action title="action_metadata" action_id="metadata" category="object"
     condition_expr="not:portal/portal_membership/isAnonymousUser"
     url_expr="string:${object_url}/cpsdocument_metadata" visible="True">
