@@ -80,4 +80,12 @@
       handler="Products.CPSSkins.upgrade.upgrade_342_343_flash_image"
       />
 
+  <!-- CPS 3.4.6 upgrades -->
+
+  <cps:upgradeStep
+      title="Upgrade the modify action to make it fully workflow handled"
+      handler=".upgrade.upgrade_document_types_edit_action"
+      checker=".upgrade.check_document_types_edit_action"
+      />
+
 </configure>
