@@ -8,6 +8,8 @@ New features
 Bug fixes
 ~~~~~~~~~
 - #1886: A set focus causes unwanted scroll in the search results page.
+- #1888: The edit action should be managed by the workflow and not be defined in
+  the portal type.
 New internal features
 ~~~~~~~~~~~~~~~~~~~~~
 - 
